add HTTP ERROR